Fix friends search using dialog style input. Rework emoticon picker to use overlay style. Reconfigure context menus to be able to widen to fit text without wrapping in some cases that do not cause the borders to be cut off.

--- a/css/chat.css
+++ b/css/chat.css
@@ -3698,14 +3698,6 @@ div:hover>.BBCodeCollapseControl {
   background-color: var(--zehn-color-input-fancy-background) !important;
 }
 
-.MemberListOptionsContainer .socialInputContainer .friendSearchInput[type="text"] {
-  height: var(--zehn-size-panel-large) !important;
-  margin: 0 !important;
-  padding-top: 0 !important;
-  padding-bottom: 0 !important;
-  font-size: var(--zehn-size-14) !important;
-}
-
 .MemberListOptionsContainer .socialInputContainer .inputContainer.no-drag {
   height: var(--zehn-size-panel-large) !important;
 }
@@ -3717,14 +3709,6 @@ div:hover>.BBCodeCollapseControl {
 
 .MemberListColumn.MemberListViewCompact .MemberListOptionsContainer .socialInputContainer .inputContainer.no-drag {
   width: 0 !important;
-}
-
-.MemberListColumn .friendSearchInput[type="text"] {
-  color: var(--zehn-color-text-primary) !important;
-  font-size: var(--zehn-size-14) !important;
-  padding: 0 var(--zehn-size-padding-medium) !important;
-  width: 100% !important;
-  height: var(--zehn-size-panel-large) !important;
 }
 
 .MemberListColumn .inputContainer::after {
