--- a/css/context.css
+++ b/css/context.css
@@ -326,12 +326,17 @@ html._14wqdluDeDnnEcg3OSLEmd ._2EstNjFIIZm_WUSKm5Wt7n {
   }
 }
 
-._2EstNjFIIZm_WUSKm5Wt7n:not(:has(.tid_OE5NJWCCVJQP1PfRc)),
-._2EstNjFIIZm_WUSKm5Wt7n.HoGkIKTQnkTEFGjqO-GMl {
-  width: 200px !important;
+._2EstNjFIIZm_WUSKm5Wt7n {
+  min-width: 200px !important;
 }
 
-._2EstNjFIIZm_WUSKm5Wt7n:has(._1eb1crSvl4J1Ie12OvhHUz) {
+/* EMOTICON PICKER */
+._2EstNjFIIZm_WUSKm5Wt7n:has(.tid_OE5NJWCCVJQP1PfRc) {
+  width: fit-content !important;
+}
+
+/* ACCOUNT */
+._2EstNjFIIZm_WUSKm5Wt7n:has(._11phBiBefcVQdzrnrezkKa) {
   width: 200px !important;
 }
 
@@ -711,14 +716,6 @@ html._14wqdluDeDnnEcg3OSLEmd ._2EstNjFIIZm_WUSKm5Wt7n {
 }
 
 /* FRIENDS REACT */
-.PP7LM0Ow1K5qkR8WElLpt:has(._2CJ0LpiSgVs2JuTlwbzBM) {
-  /*  top: 50% !important;
-    right: unset !important;
-    left: 50% !important;
-    transform: translate(-50%, -50%) !important;
-    bottom: unset !important;*/
-}
-
 ._2CJ0LpiSgVs2JuTlwbzBM:not(._1ddEQAfz6GuVRSEqk-d0r) {
   border-bottom: unset !important;
 }
@@ -738,6 +735,7 @@ html._14wqdluDeDnnEcg3OSLEmd ._2EstNjFIIZm_WUSKm5Wt7n {
   font-size: var(--zehn-size-context-text) !important;
   padding: 0 !important;
   line-height: var(--zehn-size-context-line) !important;
+  display: none !important;
 }
 
 .EuFePPYFGrcf99uLXmBYN ._2l4z-U60lABvd9XWArGjAf:hover,
@@ -749,8 +747,39 @@ html._14wqdluDeDnnEcg3OSLEmd ._2EstNjFIIZm_WUSKm5Wt7n {
   height: 28px !important;
 }
 
+/* EMOTICON PICKER */
+.PP7LM0Ow1K5qkR8WElLpt:has(.tid_OE5NJWCCVJQP1PfRc) {
+  border: none !important;
+  border-radius: var(--zehn-size-radius-medium) !important;
+  overflow: hidden !important;
+  top: calc(var(--zehn-size-border) + var(--zehn-size-titlebar-height) + var(--zehn-size-gap-large)) !important;
+  bottom: calc(var(--zehn-size-border) + var(--zehn-size-input-fancy) + var(--zehn-size-gap-large)) !important;
+  left: calc(var(--zehn-size-border) + var(--zehn-size-gap-large)) !important;
+  right: calc(var(--zehn-size-border) + var(--zehn-size-gap-large)) !important;
+}
+
+._2EstNjFIIZm_WUSKm5Wt7n:has(.tid_OE5NJWCCVJQP1PfRc) {
+  background: var(--zehn-color-panel) !important;
+  padding: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+}
+
 .tid_OE5NJWCCVJQP1PfRc {
   border-radius: var(--zehn-size-radius-none) !important;
+  margin: 0 !important;
+  min-width: 0 !important;
+  min-height: 100% !important;
+  max-height: 100% !important;
+}
+
+/* SEARCH */
+.EuFePPYFGrcf99uLXmBYN {
+  padding: 0 !important;
+}
+
+.tid_OE5NJWCCVJQP1PfRc .DialogInput_Wrapper._DialogLayout {
+  width: 100% !important;
 }
 
 ._2CJ0LpiSgVs2JuTlwbzBM {
@@ -1057,34 +1086,8 @@ html._14wqdluDeDnnEcg3OSLEmd ._2EstNjFIIZm_WUSKm5Wt7n {
 }
 
 /* FIX FOR REACT HAVING REPEATED MENU */
-._2EstNjFIIZm_WUSKm5Wt7n ._2EstNjFIIZm_WUSKm5Wt7n {
-  margin: -5px -1px !important;
-}
-
-.tid_OE5NJWCCVJQP1PfRc.Panel.Focusable {
-  margin: -4px 0 !important;
-  min-width: calc((48px * 8) + 32px) !important;
-}
-
-.EuFePPYFGrcf99uLXmBYN {}
-
-._2EstNjFIIZm_WUSKm5Wt7n ._2EstNjFIIZm_WUSKm5Wt7n::before,
-._2EstNjFIIZm_WUSKm5Wt7n ._2EstNjFIIZm_WUSKm5Wt7n::after {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  inset: 0;
-}
-
-._2EstNjFIIZm_WUSKm5Wt7n ._2EstNjFIIZm_WUSKm5Wt7n::before {
-  background-color: transparent !important;
-  backdrop-filter: blur(0px) !important;
-  background-blend-mode: normal !important;
-}
-
-._2EstNjFIIZm_WUSKm5Wt7n ._2EstNjFIIZm_WUSKm5Wt7n::after {
-  opacity: 0.0 !important;
-  background-image: url() !important;
+._2EstNjFIIZm_WUSKm5Wt7n:has(>._2EstNjFIIZm_WUSKm5Wt7n) {
+  all: none !important;
 }
 
 /* ICONS */
