--- a/css/friends.css
+++ b/css/friends.css
@@ -1059,17 +1059,10 @@ body.in_global_drag .quickAccessFriends.emptyQuickAccess {
 
 .socialInputContainer .inputContainer {
   margin: 0 !important;
-}
-
-.socialInputContainer .inputContainer.no-drag {
-  height: var(--zehn-size-panel-large) !important;
+  position: relative !important;
+  height: 100% !important;
   border-radius: var(--zehn-size-radius-none) !important;
   background-color: transparent !important;
-}
-
-.friendSearchInput[type="text"] {
-  transition: none !important;
-  background-image: none !important;
 }
 
 .inputContainer::after {
