--- a/css/overlay.css
+++ b/css/overlay.css
@@ -5926,6 +5926,7 @@ svg._1jEeo7zqm7N8CC0LXx29Py {
   padding: 0 !important;
 }
 
+
 ._3b_pllMxcr_an1aQ5goWvB[id="DesktopUIOverlayWindow594650"] .DialogContent._DialogLayout.GenericConfirmDialog._DialogCenterVertically .DialogContent_InnerWidth {
   min-height: 40px !important;
 }
@@ -5948,6 +5949,8 @@ svg._1jEeo7zqm7N8CC0LXx29Py {
 
 ._3s3Qu7GTG10-xfe39uFxJD {
   padding: 0 !important;
+  height: 80vh !important;
+  width: 400px !important;
 }
 
 /* SEARCH */
@@ -5958,6 +5961,9 @@ svg._1jEeo7zqm7N8CC0LXx29Py {
 
 .DialogContent.GenericConfirmDialog._DialogCenterVertically:has(._3s3Qu7GTG10-xfe39uFxJD) .DialogInput_Wrapper {
   padding: 0 var(--zehn-size-padding-medium) !important;
+  max-height: var(--zehn-size-input-dialog) !important;
+  width: 100% !important;
+  box-sizing: border-box !important;
 }
 
 .DialogContent.GenericConfirmDialog._DialogCenterVertically:has(._3s3Qu7GTG10-xfe39uFxJD) .DialogContent_InnerWidth>form {
