--- a/css/settings.css
+++ b/css/settings.css
@@ -3676,6 +3676,10 @@ div[role="radiogroup"] {
   margin: 0 !important;
 }
 
+._1FyBL6obxHQ2Z2CsaV2Gbz .DialogBody .ZII4C3WPvs65P3yvAtV69 .DialogInput_Wrapper>input.DialogInput {
+  max-width: unset !important;
+}
+
 ._1FyBL6obxHQ2Z2CsaV2Gbz .DialogBody ._3sXdOJ9DEh5zdS54_ptwgW {
   border: unset !important;
   margin-top: 0 !important;
